src/objects/FGW_API_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Holds information about the various APIs GW is able to access for information.</description>
    <fields>
        <fullName>API_Endpoint__c</fullName>
        <description>The actual HTTP endpoint for this API</description>
        <inlineHelpText>The actual HTTP endpoint for this API</inlineHelpText>
        <label>API Endpoint</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>API_Key__c</fullName>
        <description>Key used for authentication to this API</description>
        <inlineHelpText>Key used for authentication to this API</inlineHelpText>
        <label>API Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Type__c</fullName>
        <description>Type of information this API access.  Currently supported values are &quot;State&quot; or &quot;Federal&quot;</description>
        <inlineHelpText>Type of information this API access.  Currently supported values are &quot;State&quot; or &quot;Federal&quot;</inlineHelpText>
        <label>API Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Name__c</fullName>
        <description>The name of the class for this API</description>
        <inlineHelpText>The name of the class for this API</inlineHelpText>
        <label>Class Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selectable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If this API should be available when presenting API options for searches &amp; queries</description>
        <inlineHelpText>If this API should be available when presenting API options for searches &amp; queries</inlineHelpText>
        <label>Selectable</label>
        <type>Checkbox</type>
    </fields>
    <label>FGW_API_Settings</label>
</CustomObject>